@@ -1,4 +1,4 @@
-rev 12-Aug_23-21_03
+rev 12-Aug_24-17_48
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -37,4 +37,7 @@ where templates force Standards Mode will have to manually switch to compatibilt
 In other cases, fckgLite auto-switches to IE8 compatibility,
 
 23 August
-Fix for smileys in lists where CR was lost if smiley was in li
+Fixed for smileys in lists where CR was lost if smiley was in li
+
+24 August
+fckeditor/dwsmileys.php: set alternate path for ajax access to smiley.conf in debian and ubuntu
